# athenas-studio

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  install.ps1  install.sh
.github/workflows/: ci.yml  pr-build.yml  release.yml
crates/athenas-cli/: Cargo.toml
crates/athenas-cli/src/: main.rs
crates/athenas-cli/src/commands/: backend.rs  chat.rs  config.rs  hardware.rs  mod.rs  models.rs  run.rs  serve.rs  tui.rs  update.rs
crates/athenas-core/: Cargo.toml
crates/athenas-core/src/: config.rs  errors.rs  hardware.rs  lib.rs  model_registry.rs  storage.rs
crates/athenas-hub/: Cargo.toml
crates/athenas-hub/src/: client.rs  download.rs  lib.rs  search.rs
crates/athenas-inference/: Cargo.toml
crates/athenas-inference/src/: backend.rs  backend_setup.rs  lib.rs  llama_cpp.rs  types.rs  vllm.rs
crates/athenas-server/: Cargo.toml
crates/athenas-server/src/: api_keys.rs  audit_log.rs  lib.rs  metrics.rs  middleware.rs  model_manager.rs  model_router.rs  routes.rs  server.rs  session_manager.rs  slot_manager.rs
crates/athenas-tui/: Cargo.toml
crates/athenas-tui/src/: app.rs  chat.rs  components.rs  lib.rs  log_buffer.rs  model_browser.rs  model_list.rs  server_panel.rs  settings.rs
web/: index.html
wiki/: API-Reference.md  Architecture.md  Audit-Logging.md  Backends.md  CLI-Commands.md  Configuration.md  Deployment.md  Embeddings-API.md  Function-Calling.md  Home.md  Installation.md  Model-Routing.md  Multi-tenant-API-Keys.md  Quick-Start.md  Session-and-Slot-Management.md  TUI-Guide.md
