[package]
name = "athenas"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
athenas-core = { workspace = true }
athenas-inference = { workspace = true }
athenas-hub = { workspace = true }
athenas-server = { workspace = true }
athenas-tui = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
comfy-table = { workspace = true }
indicatif = { workspace = true }
chrono = { workspace = true }
toml = { workspace = true }
