[package]
name = "athenas-inference"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
athenas-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
futures = { workspace = true }
reqwest = { workspace = true }
which = "7.0"
