[package]
name = "athenas-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
athenas-core = { workspace = true }
athenas-inference = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
axum = { workspace = true, features = ["multipart"] }
tower = { workspace = true }
tower-http = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
async-stream = "0.3"
prometheus = "0.13"
hyper = "1.0"
base64 = "0.22"
