[package]
name = "athenas-tui"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
athenas-core = { workspace = true }
athenas-inference = { workspace = true }
athenas-hub = { workspace = true }
athenas-server = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }
tui-textarea = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
